--- a/LightningLib.Tests/LightningLib.Tests.csproj
+++ b/LightningLib.Tests/LightningLib.Tests.csproj
@@ -91,7 +91,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\CoinpanicTestData\TestData.config">
+    <None Include="..\..\CoinpanicTestData\TestData.config">
       <Link>TestData.config</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -108,10 +108,6 @@
     <ProjectReference Include="..\LightningLib\LightningLib.csproj">
       <Project>{824d15c2-a623-46d0-a45e-cf152e97c025}</Project>
       <Name>LightningLib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\NBitcoin\NBitcoin\NBitcoin.csproj">
-      <Project>{cce119e6-e7e3-47e4-a022-68997b233a33}</Project>
-      <Name>NBitcoin</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
