Added test to create hex encoded macaroons for use in API calls.

--- a/LightningLib.Tests/LightningLib.Tests.csproj
+++ b/LightningLib.Tests/LightningLib.Tests.csproj
@@ -87,6 +87,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Encoders.cs" />
+    <Compile Include="HexEncoder.cs" />
     <Compile Include="lndTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
