--- a/LightningLib/LightningLib.csproj
+++ b/LightningLib/LightningLib.csproj
@@ -50,6 +50,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="lndrpc\Encoders.cs" />
+    <Compile Include="lndrpc\HexEncoder.cs" />
     <Compile Include="lndrpc\LndRpcClient.cs" />
     <Compile Include="lndrpc\Responses.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
