--- a/LightningLib/packages.config
+++ b/LightningLib/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="RestSharp" version="106.6.10" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="System.IO" version="4.3.0" targetFramework="net48" />
 </packages>
